--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 							<ul class="dropdown-menu shopping-cart-items">
 								<li>Total count: <span class="total-count"></span></li>
 								<li>Total cost: <span class="total-cost"></span></li>
-								<li><button class="btn btn-primary btn-block"><a href="shopping-cart.html">View cart</a></button></li>
+								<li><a href="shopping-cart.html" class="btn btn-primary btn-block">View cart</a></li>
 							</ul>
 						</li>
 					</ul>
-					<button id="sign-in-btn" href="#" class="btn btn-primary navbar-btn navbar-right"><i class="fab fa-facebook-f"></i> Sign in</button>
+					<a id="sign-in-btn" href="#" class="btn btn-primary navbar-btn navbar-right"><i class="fab fa-facebook-f"></i> Sign in</a>
 				</div>
 			</div>
 		</nav>
@@ -123,9 +123,9 @@
 								<div class="panel-body">
 									<div class="thumbnail">
 										<img src="img/product1.jpg" alt="product1">
-										<div class="product-discription">
-											<div class="product-discription-cell">
-												<div><span class="product-discription-title">Details</span>Diagonal 2.4" / 1000 mA/h / Weight 120 g / 2 SD cards / USB / FM receiver / Dictophone</div>
+										<div class="product-description">
+											<div class="product-description-cell">
+												<div><span class="product-description-title">Details</span>Diagonal 2.4" / 1000 mA/h / Weight 120 g / 2 SD cards / USB / FM receiver / Dictophone</div>
 											</div>
 										</div>
 									</div>
@@ -145,9 +145,9 @@
 								<div class="panel-body">
 									<div class="thumbnail">
 										<img src="img/product2.jpg" alt="product2">
-										<div class="product-discription">
-											<div class="product-discription-cell">
-												<div><span class="product-discription-title">Details</span>Monitor 17" / RAM 4 GB / HDD 320 GB / Silver / Weight 2600 g / HDMI / GPS / Bluetooth</div>
+										<div class="product-description">
+											<div class="product-description-cell">
+												<div><span class="product-description-title">Details</span>Monitor 17" / RAM 4 GB / HDD 320 GB / Silver / Weight 2600 g / HDMI / GPS / Bluetooth</div>
 											</div>
 										</div>
 									</div>
@@ -167,9 +167,9 @@
 								<div class="panel-body">
 									<div class="thumbnail">
 										<img src="img/product3.jpg" alt="product3">
-										<div class="product-discription">
-											<div class="product-discription-cell">
-												<div><span class="product-discription-title">Details</span>Monitor diagonal 9" / Matrix type: E lnk Pearl / Resolution: 1600x1200 / Memory 6 GB / Weight 190&nbsp;g</div>
+										<div class="product-description">
+											<div class="product-description-cell">
+												<div><span class="product-description-title">Details</span>Monitor diagonal 9" / Matrix type: E lnk Pearl / Resolution: 1600x1200 / Memory 6 GB / Weight 190&nbsp;g</div>
 											</div>
 										</div>
 									</div>
@@ -189,9 +189,9 @@
 								<div class="panel-body">
 									<div class="thumbnail">
 										<img src="img/product4.jpg" alt="product4">
-										<div class="product-discription">
-											<div class="product-discription-cell">
-												<div><span class="product-discription-title">Details</span>Monitor diagonal 6.0" / Camera: 3.2Mp / RAM: 4&nbsp;Gb / Orange / 1100 mA/h / Weight 220 g / WiFi / Bluetooth / Dictophone / USB</div>
+										<div class="product-description">
+											<div class="product-description-cell">
+												<div><span class="product-description-title">Details</span>Monitor diagonal 6.0" / Camera: 3.2Mp / RAM: 4&nbsp;Gb / Orange / 1100 mA/h / Weight 220 g / WiFi / Bluetooth / Dictophone / USB</div>
 											</div>
 										</div>
 									</div>
@@ -211,9 +211,9 @@
 								<div class="panel-body">
 									<div class="thumbnail">
 										<img src="img/product5.jpg" alt="product5">
-										<div class="product-discription">
-											<div class="product-discription-cell">
-												<div><span class="product-discription-title">Details</span>Monitor diagonal 4.0" / Camera: 1.2Mp / RAM: 4&nbsp;Gb / Orange / 1500 mA/h / Weight 150 g / WiFi / Bluetooth / Dictophone / USB</div>
+										<div class="product-description">
+											<div class="product-description-cell">
+												<div><span class="product-description-title">Details</span>Monitor diagonal 4.0" / Camera: 1.2Mp / RAM: 4&nbsp;Gb / Orange / 1500 mA/h / Weight 150 g / WiFi / Bluetooth / Dictophone / USB</div>
 											</div>
 										</div>
 									</div>
@@ -233,9 +233,9 @@
 								<div class="panel-body">
 									<div class="thumbnail">
 										<img src="img/product6.jpg" alt="product6">
-										<div class="product-discription">
-											<div class="product-discription-cell">
-												<div><span class="product-discription-title">Monitor 9" / RAM 3 GB / HDD 370 GB / Black / Weight 260 g / Bluetooth / 3G / USB / GPS</div>
+										<div class="product-description">
+											<div class="product-description-cell">
+												<div><span class="product-description-title">Monitor 9" / RAM 3 GB / HDD 370 GB / Black / Weight 260 g / Bluetooth / 3G / USB / GPS</span></div>
 											</div>
 										</div>
 									</div>
@@ -255,9 +255,9 @@
 								<div class="panel-body">
 									<div class="thumbnail">
 										<img src="img/product1.jpg" alt="product7">
-										<div class="product-discription">
-											<div class="product-discription-cell">
-												<div><span class="product-discription-title">Details</span>Diagonal 2.4" / 1000 mA/h / Weight 120 g / 2 SD cards / USB / FM receiver / Dictophone</div>
+										<div class="product-description">
+											<div class="product-description-cell">
+												<div><span class="product-description-title">Details</span>Diagonal 2.4" / 1000 mA/h / Weight 120 g / 2 SD cards / USB / FM receiver / Dictophone</div>
 											</div>
 										</div>
 									</div>
@@ -277,9 +277,9 @@
 								<div class="panel-body">
 									<div class="thumbnail">
 										<img src="img/product2.jpg" alt="product8">
-										<div class="product-discription">
-											<div class="product-discription-cell">
-												<div><span class="product-discription-title">Details</span>Monitor 17" / RAM 4 GB / HDD 320 GB / Silver / Weight 2600 g / HDMI / GPS / Bluetooth</div>
+										<div class="product-description">
+											<div class="product-description-cell">
+												<div><span class="product-description-title">Details</span>Monitor 17" / RAM 4 GB / HDD 320 GB / Silver / Weight 2600 g / HDMI / GPS / Bluetooth</div>
 											</div>
 										</div>
 									</div>
@@ -299,9 +299,9 @@
 								<div class="panel-body">
 									<div class="thumbnail">
 										<img src="img/product3.jpg" alt="product9">
-										<div class="product-discription">
-											<div class="product-discription-cell">
-												<div><span class="product-discription-title">Details</span>Monitor diagonal 9" / Matrix type: E lnk Pearl / Resolution: 1600x1200 / Memory 6 GB / Weight 190&nbsp;g</div>
+										<div class="product-description">
+											<div class="product-description-cell">
+												<div><span class="product-description-title">Details</span>Monitor diagonal 9" / Matrix type: E lnk Pearl / Resolution: 1600x1200 / Memory 6 GB / Weight 190&nbsp;g</div>
 											</div>
 										</div>
 									</div>
@@ -321,9 +321,9 @@
 								<div class="panel-body">
 									<div class="thumbnail">
 										<img src="img/product4.jpg" alt="product10">
-										<div class="product-discription">
-											<div class="product-discription-cell">
-												<div><span class="product-discription-title">Details</span>Monitor diagonal 6.0" / Camera: 3.2Mp / RAM: 4&nbsp;Gb / Orange / 1100 mA/h / Weight 220 g / WiFi / Bluetooth / Dictophone / USB</div>
+										<div class="product-description">
+											<div class="product-description-cell">
+												<div><span class="product-description-title">Details</span>Monitor diagonal 6.0" / Camera: 3.2Mp / RAM: 4&nbsp;Gb / Orange / 1100 mA/h / Weight 220 g / WiFi / Bluetooth / Dictophone / USB</div>
 											</div>
 										</div>
 									</div>
@@ -343,9 +343,9 @@
 								<div class="panel-body">
 									<div class="thumbnail">
 										<img src="img/product5.jpg" alt="product11">
-										<div class="product-discription">
-											<div class="product-discription-cell">
-												<div><span class="product-discription-title">Details</span>Monitor diagonal 4.0" / Camera: 1.2Mp / RAM: 4&nbsp;Gb / Orange / 1500 mA/h / Weight 150 g / WiFi / Bluetooth / Dictophone / USB</div>
+										<div class="product-description">
+											<div class="product-description-cell">
+												<div><span class="product-description-title">Details</span>Monitor diagonal 4.0" / Camera: 1.2Mp / RAM: 4&nbsp;Gb / Orange / 1500 mA/h / Weight 150 g / WiFi / Bluetooth / Dictophone / USB</div>
 											</div>
 										</div>
 									</div>
@@ -365,9 +365,9 @@
 								<div class="panel-body">
 									<div class="thumbnail">
 										<img src="img/product6.jpg" alt="product12">
-										<div class="product-discription">
-											<div class="product-discription-cell">
-												<div><span class="product-discription-title">Monitor 9" / RAM 3 GB / HDD 370 GB / Black / Weight 260 g / Bluetooth / 3G / USB / GPS</div>
+										<div class="product-description">
+											<div class="product-description-cell">
+												<div><span class="product-description-title">Monitor 9" / RAM 3 GB / HDD 370 GB / Black / Weight 260 g / Bluetooth / 3G / USB / GPS</span></div>
 											</div>
 										</div>
 									</div>
@@ -383,8 +383,8 @@
 							</div>
 						</div>
 					</div>
-					<img id="load-more-indicator" src="img/loading.gif" class="hidden center-block" alt="loading">
-					<button id="load-more" class="btn btn-success">Load more products</button>
+					<img id="load-more-indicator" src="img/loading.gif" class="hidden hidden-print center-block" alt="loading">
+					<button id="load-more" class="btn btn-success hidden-print">Load more products</button>
 				</div>
 				<div id="add-product-popup" class="modal fade" tabindex="-1" role="dialog">
 					<div class="modal-dialog" role="document">
