--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -31,19 +31,7 @@
 					<a class="navbar-brand" href="index.html">EShop</a>
 				</div>
 				<div id="eshop-nav" class="collapse navbar-collapse">
-					<ul id="shopping-cart-menu" class="nav navbar-nav navbar-right">
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-								<i class="fas fa-shopping-cart"></i> Shopping cart (<span class="total-count">0</span>)<span class="caret"></span>
-							</a>
-							<ul class="dropdown-menu shopping-cart-items">
-								<li>Total count: <span class="total-count"></span></li>
-								<li>Total cost: <span class="total-cost"></span></li>
-								<li><button class="btn btn-primary btn-block"><a href="shopping-cart.html">View cart</a></button></li>
-							</ul>
-						</li>
-					</ul>
-					<button id="sign-in-btn" href="#" class="btn btn-primary navbar-btn navbar-right"><i class="fab fa-facebook-f"></i>Sign in</button>
+					<a id="sign-in-btn" href="#" class="btn btn-primary navbar-btn navbar-right"><i class="fab fa-facebook-f"></i>Sign in</a>
 				</div>
 			</div>
 		</nav>
@@ -118,14 +106,14 @@
 			</aside>
 			<main class="col-xs-12 col-sm-8 col-md-9 col-lg-10">
 				<div id="shopping-cart">
-					<div class="alert alert-warning" role="alert">To make order, please sign in</div>
+					<div class="alert alert-warning hidden-print" role="alert">To make order, please sign in</div>
 					<table class="table table-bordered">
 						<thead>
 							<tr>
 								<th>Product</th>
 								<th>Price</th>
 								<th>Count</th>
-								<th>Action</th>
+								<th class="hidden-print">Action</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -135,7 +123,7 @@
 								</td>
 								<td class="price">$ 30</td>
 								<td class="count">2</td>
-								<td>
+								<td class="hidden-print">
 									<div class="btn btn-danger remove-product" data-id-product="1" data-count="1">Remove one</div>
 								</td>
 							</tr>
@@ -145,7 +133,7 @@
 								</td>
 								<td class="price">$ 1200</td>
 								<td class="count">2</td>
-								<td>
+								<td class="hidden-print">
 									<div class="btn btn-danger remove-product" data-id-product="2" data-count="1">Remove one</div><br><br>
 									<div class="btn btn-danger remove-product remove-all" data-id-product="2" data-count="1">Remove all</div>
 								</td>
@@ -158,7 +146,7 @@
 					</table>
 					<div class="row">
 						<div class="col-md-4 col-md-offset-4 col-lg-2 col-lg-offset-5">
-							<button class="btn-primary btn-block"><i class="fab fa-facebook-f"></i> Sign in</button>
+							<button class="btn-primary btn-block hidden-print"><i class="fab fa-facebook-f"></i> Sign in</button>
 						</div>						
 					</div>
 					
